--- a/templates/respuestas.html
+++ b/templates/respuestas.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Respuestas {{tema}}</title>
+    <title>Exam</title>
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name=viewport content="width=device-width, initial-scale=1">
